--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/kala-favicon-square.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>Kala | AI Artist and Art Style Recognition</title>
   <meta name="description" content="Modern Art Gallery Application" />
   <meta name="author" content="Kala Art Gallery" />
